Fix count alignement in list pages

--- a/css/style.css
+++ b/css/style.css
@@ -9396,6 +9396,13 @@ div.dataTables_filter input.input-sm {
 fieldset legend.panel-heading {
   float: none !important;
 }
+.list-counts:first-child {
+  margin-top: 1px;
+  display: inline-block;
+  vertical-align: middle;
+  text-align: center;
+  padding: 6px 16px;
+}
 @media (max-width: 1023px) {
   .navbar-header {
     float: none;
