--- a/less/obiba.less
+++ b/less/obiba.less
@@ -595,3 +595,10 @@ div.dataTables_filter {
 fieldset legend.panel-heading {
   float: none !important;
 }
+.list-counts:first-child{
+  margin-top: 1px;
+  display: inline-block;
+  vertical-align: middle;
+  text-align: center;
+  padding: 6px 16px;
+}
